--- a/src/app/home/abrirpedido/abrirpedido.component.css
+++ b/src/app/home/abrirpedido/abrirpedido.component.css
@@ -8,3 +8,12 @@
   margin-bottom:10px;
   
 }
+
+#caixaItens{
+    
+  background-color: #f5f5f5;
+  border: 1px solid #f5f5f5; 
+  box-shadow: 10px 10px 10px -6px rgba(0,0,0,0.75);  
+  padding: 10px;
+  border-radius: 5px;
+}
