Formulário de pedido

--- a/src/app/home/abrirpedido/abrirpedido.component.css
+++ b/src/app/home/abrirpedido/abrirpedido.component.css
@@ -9,11 +9,22 @@
   
 }
 
-#caixaItens{
+#avisoFormItem{
+  font: bold 11px arial;
+  color: crimson;
+  text-align: center;
+  margin-top:10px;
+  margin-bottom:10px;
+  
+}
+
+#tabelaItens{
     
   background-color: #f5f5f5;
-  border: 1px solid #f5f5f5; 
+  border: 1px solid #bbaeae; 
   box-shadow: 10px 10px 10px -6px rgba(0,0,0,0.75);  
   padding: 10px;
   border-radius: 5px;
+  padding:5px;
+  font-size:14px;
 }
