--- a/src/app/home/abrirpedido/abrirpedido.component.html
+++ b/src/app/home/abrirpedido/abrirpedido.component.html
@@ -138,7 +138,7 @@
     
    </div>
    <div id="conferenciaPedido" style='display:none'>
-        <div style='text-align:center'><b>CONFERÊNCIA PEDIDO nº {{aberturaPedido.pedidoId}}</b></div>
+        <div style='text-align:center;'><b>CONFERÊNCIA PEDIDO nº {{aberturaPedido.pedidoId}}</b></div>
     </div>
 
 </div>
@@ -160,7 +160,7 @@
 
 </div>
 <div style='text-align:right;display:none;' id='divBotaoFechar'>
-    <button class="btn btn-primary" (click)="voltarForm()" style= 'margin-right:20px' >VOLTAR</button> <button class="btn btn-primary" (click)="fecharPedido()" >FECHAR</button>
+    <button class="btn btn-primary" (click)="voltarForm()" style= 'margin-right:20px' >VOLTAR</button> <button class="btn btn-primary" (click)="fecharPedido()" >FECHAR</button><br>
     <br><button class="btn btn-primary" (click)="imprimir()" >PRINT</button>
 </div>
 
