Lista de Pedidos em Processo

--- a/src/app/home/abrirpedido/abrirpedido.component.html
+++ b/src/app/home/abrirpedido/abrirpedido.component.html
@@ -247,8 +247,8 @@
 
 </div>
 <div style='text-align:right;display:none;' id='divBotaoFechar'>
-    <button class="btn btn-primary" (click)="voltarForm()" style= 'margin-right:20px' >VOLTAR</button> <button class="btn btn-primary" (click)="fecharPedido()" >FECHAR</button><br>
-    <br><button class="btn btn-primary" (click)="imprimir()" >PRINT</button>
+    <button class="btn btn-info btn-sm" (click)="voltarForm()" style= 'margin-right:20px' >VOLTAR</button> <button class="btn btn-info btn-sm" (click)="fecharPedido()" >FECHAR PEDIDO</button><br>
+    
 </div>
 
 </form>
