--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" [routerLink]="['/home/abrirPedido']">Abrir </a>
-            <a class="dropdown-item" href="#">Consultar</a>
+            <a class="dropdown-item" [routerLink]="['/home/pedidosEmProcesso']">Em Processo</a>
             <a class="dropdown-item" href="#">Entrega</a>
             <a class="dropdown-item" href="#">Fechamento</a>
           </div>
