--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
     <br>
     <div class="alert alert-danger"  id="caixaMsgErro">Login/Senha Incorretos ou problemas de acesso</div>
     <div class="alert alert-info"  id="caixaMsgAguardar">Aguarde um momento</div>
-    <button class="btn btn-primary" (click)="submitForm()" >ACESSAR</button>
+    <button class="btn btn-primary" (click)="submitForm()" [disabled]='submited' >ACESSAR</button>
     </form>
     
   </div>
